// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/props props.container.js should map redux model into properties array 1`] = `
<div
  className={
    Object {
      "data-css-7xct0c": "",
    }
  }
  style={Object {}}
>
  <input
    name="foo"
  />
  <input
    name="bar"
  />
</div>
`;

exports[`component/props props.jsx should render by default 1`] = `
<div
  className={
    Object {
      "data-css-7xct0c": "",
    }
  }
  style={Object {}}
/>
`;

exports[`component/props props.jsx should render inputs following given properties 1`] = `
<div
  className={
    Object {
      "data-css-7xct0c": "",
    }
  }
  style={Object {}}
>
  <input
    name="prop1"
  />
  <input
    name="prop2"
  />
</div>
`;

exports[`component/props props.jsx should take custom className 1`] = `
<div
  className={
    Object {
      "data-css-132or61": "",
    }
  }
  style={Object {}}
/>
`;

exports[`component/props props.jsx should take custom style 1`] = `
<div
  className={
    Object {
      "data-css-7xct0c": "",
    }
  }
  style={
    Object {
      "backgroundColor": "red",
    }
  }
/>
`;
